k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio-service
spec:
  type: LoadBalancer
  selector:
    app: devops-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
